COMP: travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
         brew upgrade cmake && \
         export PATH="/usr/local/opt/ccache/libexec:$PATH"
     fi
-  - pip3 install scipy
+  - pip3 install scipy pandas numpy matplotlib
 #  - pip install  --user -r cibuildwheel==0.9.1;
   - pip3 install coveralls plotly webcolors scikit-image;
   - pip3 install --upgrade pip setuptools wheel;
