COMP: travis again

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ before_install:
   - pip3 install scipy pandas numpy matplotlib
 #  - pip install  --user -r cibuildwheel==0.9.1;
   - pip3 install coveralls plotly webcolors scikit-image;
-  - pip3 install --upgrade pip setuptools wheel;
-  - pip3 install -r requirements.txt
+  - pip3 install --upgrade pip setuptools wheel
+#  - pip3 install -r requirements.txt
 
 
 jobs:
