--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,9 @@ before_install:
 
 #  - pip3 install -r requirements.txt
 
-
+install:
+  - echo "skip this"
+  
 jobs:
   include:
 
@@ -77,7 +79,8 @@ jobs:
         find /usr/local -name cmake
       os: linux
       sudo: required
-      python: 3.6
+      python: "3.6"
+
     - stage: makeITK
       script: |
         brew update;
@@ -92,7 +95,7 @@ jobs:
         cmake --version;
         ./scripts/configure_ITK.sh
       os: osx
-      python: 3.6
+      python: "3.6"
       sudo: required
       language: generic
 
