--- a/.travis.yml
+++ b/.travis.yml
@@ -34,35 +34,8 @@ before_install:
 #  - pip3 install -r requirements.txt
 
 install:
-  - echo "skip this"
-
-jobs:
-    - stage: install
-      env: PIP=pip
-      script: |
-#        export ITK_DIR=${TRAVIS_BUILD_DIR}/itkbuild;
-#        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
-#        echo "myITK is"; echo $ITK_DIR;
-#        ls $ITK_DIR;
-        python3 setup.py install;
-        ./tests/run_tests_travis.sh
-      os: linux
-      python: 3.6
-      sudo: required
-
-    - stage: install
-      env: PIP=pip
-      script: |
-        alias cmake=/usr/local/bin/cmake;
-        python3 setup.py install;
-        ./tests/run_tests_travis.sh
-      os: osx
-      python: 3.6
-      sudo: required
-      language: generic
-
-  allow_failures:
-    - os: osx
+  - python3 setup.py install;
+  - ./tests/run_tests_travis.sh
 
 branches:
   only:
