COMP: try again

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ before_install:
 
 install:
   - python3 setup.py install;
-  - ./tests/run_tests_travis.sh
+
+script: ./tests/run_tests_travis.sh
 
 branches:
   only:
