--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,15 @@ before_install:
 #  - pip3 install --upgrade pip setuptools wheel
 #  - pip3 install -r requirements.txt
 
+matrix:
+    include:
+        - os: linux
+          python: 3.6
+          env: TOXENV=py36
+        - os: osx
+          python: 3.5
+          env: TOXENV=py35
+
 install:
   - python3 setup.py install;
 
