WIP: travis yet again

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ os:
 cache:
     - directories:
         - /home/travis/build/ANTsX/itkbuild
+        - /home/travis/build/ANTsX/itksource
         - /usr/local
 
 before_install:
