--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
   - export ITK_DIR=/home/travis/build/ANTsX/itkbuild/
 
 install:
-  - echo 0 # python3 setup.py install
+  - python3 setup.py install
 
 script: echo 0 # ./tests/run_tests_travis.sh
 
