--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,10 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+                - run:
+          name: Install CMAKE
+          command: 'apt-get update && sudo apt-get install -y cmake'
+
 
       - save_cache:
           paths:
