--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,11 @@ jobs:
 
     working_directory: ~/repo
 
+
+    machine:
+      environment:
+        PATH: "/home/ubuntu/cmake-3.14.0/bin:$PATH"
+
     steps:
       - checkout
 
@@ -35,19 +40,13 @@ jobs:
             pip install -r requirements.txt
       - run:
           name: Install CMAKE
-          command: 'apt-get update && sudo apt-get install -y cmake'
-
+          command: '        cd ~ && wget --quiet https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0.tar.gz && tar -xvf cmake-3.14.0.tar.gz'
 
       - save_cache:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
       - run:
           name: run tests
           command: |
