--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,12 +18,13 @@ jobs:
     working_directory: ~/repo
 
 
-    machine:
-      environment:
-        PATH: "/home/ubuntu/cmake-3.14.0/bin:$PATH"
-
     steps:
       - checkout
+
+      - run:
+          name: "Setup custom environment variables"
+          command: |
+            echo 'export PATH="/home/ubuntu/cmake-3.14.0/bin:$PATH"' >> $BASH_ENV # Redirect MY_ENV_VAR into $BASH_ENV
 
       # Download and cache dependencies
       - restore_cache:
@@ -33,14 +34,15 @@ jobs:
             - v1-dependencies-
 
       - run:
+          name: Install CMAKE
+          command: '        cd ~ && wget --quiet https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0.tar.gz && tar -xvf cmake-3.14.0.tar.gz'
+
+      - run:
           name: install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
-      - run:
-          name: Install CMAKE
-          command: '        cd ~ && wget --quiet https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0.tar.gz && tar -xvf cmake-3.14.0.tar.gz'
 
       - save_cache:
           paths:
