--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
           name: "Setup custom environment variables"
           command: |
             echo 'export PATH="/home/ubuntu/cmake-3.14.0/bin:$PATH"' >> $BASH_ENV # Redirect MY_ENV_VAR into $BASH_ENV
+            pwd
+            echo $PATH
 
       # Download and cache dependencies
       - restore_cache:
@@ -35,7 +37,7 @@ jobs:
 
       - run:
           name: Install CMAKE
-          command: '        cd ~ && wget --quiet https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0.tar.gz && tar -xvf cmake-3.14.0.tar.gz'
+          command: '        cd ~ && wget --quiet https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0.tar.gz && tar -xvf cmake-3.14.0.tar.gz &&  cd cmake-3.14.0 && ./bootstrap && make '
 
       - run:
           name: install dependencies
@@ -47,6 +49,7 @@ jobs:
       - save_cache:
           paths:
             - ./venv
+            - ~/cmake-3.14.0
           key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       - run:
