--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
           name: install dependencies
           command: |
             echo $PATH
+            which cmake
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
@@ -55,6 +56,8 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
+            source $BASH_ENV
+            which cmake
             python setup.py install
 
       - store_artifacts:
