--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,9 +73,10 @@ after_test:
   - sh: python setup.py sdist bdist_wheel
   # - "%CMD_IN_ENV% python setup.py bdist_wininst"
   # - "%CMD_IN_ENV% python setup.py bdist_msi"
-  - ps: "ls dist"
+  - sh: "ls dist"
 
 artifacts:
+  - path: $APPVEYOR_BUILD_FOLDER/itkbuild/  
   # Archive the generated packages in the ci.appveyor.com build report.
   - path: dist\*
 
