--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,6 +80,16 @@ artifacts:
   - path: $APPVEYOR_BUILD_FOLDER/itkbuild/  
   # Archive the generated packages in the ci.appveyor.com build report.
   - path: dist\*
+  - path: '\*_*.zip'
+    name: Bits
+
+on_failure:
+  - 7z a itkbuild.zip itkbuild/
+  - appveyor PushArtifact itkbuild.zip
+  - 7z a whole.zip *
+  - appveyor PushArtifact whole.zip
+
+
 
 #on_success:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
