--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,10 +50,13 @@ install:
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
   - git --version
-  - sh ./scripts/configure_ITK.sh
+  - Invoke-WebRequest https://github.com/muschellij2/ITKR/releases/download/v0.5.2.0.2/ITKR_0.5.2_R3.6.zip -OutFile "ITKR.zip"
+  - unzip ITKR.zip
+  - ls 
+  - ls ITKR
   # - temp=`find ./ -name "ITKConfig.cmake"`
-  - sh: export ITK_DIR=$APPVEYOR_BUILD_FOLDER/itkbuild/  
-  - "SET ITK_DIR=%APPVEYOR_BUILD_FOLDER%/itkbuild/"
+  - sh: export ITK_DIR=$APPVEYOR_BUILD_FOLDER/ITKR/libs/  
+  - "SET ITK_DIR=%APPVEYOR_BUILD_FOLDER%/ITKR/libs/"
 
 
 build_script:
