--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,7 +51,7 @@ install:
   - "%CMD_IN_ENV% pip install -r requirements.txt"
   - git --version
   - ps: Invoke-WebRequest https://github.com/muschellij2/ITKR/releases/download/v0.5.2.0.2/ITKR_0.5.2_R3.6.zip -OutFile "ITKR.zip"
-  - unzip ITKR.zip
+  - unzip -q ITKR.zip
   - ls 
   - ls ITKR
   # - temp=`find ./ -name "ITKConfig.cmake"`
