COMP: dont try wheels on travis just yet

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,14 +48,14 @@ before_install:
 install:
   - python3 -m pip install cibuildwheel==1.3.0
   - python3 setup.py install
-  - travis_wait 30 python3 setup.py sdist bdist_wheel
+#  - travis_wait 30 python3 setup.py sdist bdist_wheel
 
 script:
   # build the wheels, put them into './wheelhouse'
   - ./tests/run_tests_travis.sh
-  - python3 -m cibuildwheel --output-dir wheelhouse
-  - python3 -m pip install twine
-  - ls wheelhouse/*whl
+#  - python3 -m cibuildwheel --output-dir wheelhouse
+#  - python3 -m pip install twine
+#  - ls wheelhouse/*whl
 
 # FIXME see https://github.com/joerick/cibuildwheel
 
@@ -63,5 +63,5 @@ after_success:
   # if the release was tagged, upload them to PyPI
   - |
     if [[ $TRAVIS_TAG ]]; then
-      python3 -m twine upload wheelhouse/*.whl
+      echo nada # python3 -m twine upload wheelhouse/*.whl
     fi
