--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -49,6 +49,7 @@ pybind11_add_module(antsTransform LOCAL_antsTransform.cxx)
 pybind11_add_module(cropImage LOCAL_cropImage.cxx)
 pybind11_add_module(fsl2antstransform LOCAL_fsl2antstransform.cxx)
 pybind11_add_module(getNeighborhoodMatrix LOCAL_getNeighborhoodMatrix.cxx)
+pybind11_add_module(histogramMatchImage LOCAL_histogramMatchImages.cxx)
 pybind11_add_module(invariantImageSimilarity LOCAL_invariantImageSimilarity.cxx)
 pybind11_add_module(labelStats LOCAL_labelStats.cxx)
 pybind11_add_module(mergeChannels LOCAL_mergeChannels.cxx)
@@ -113,6 +114,7 @@ target_link_libraries(antsTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(cropImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(fsl2antstransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(histogramMatchImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(invariantImageSimilarity PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(mergeChannels PRIVATE ${ITK_LIBRARIES})
